--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -42,6 +42,12 @@
   color: #fff;
 }
 
+.logo img {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+}
+
 .nav-links {
   display: flex;
   gap: 30px;
@@ -319,6 +325,11 @@ body.dark .language-toggle {
 
   .language-toggle span {
     font-size: 12px;
+  }
+
+  .logo img {
+    width: 30px;
+    height: 30px;
   }
 }
 
